// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldTooltipFc should render correctly 1`] = `
<kol-tooltip-wc
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip"
/>
`;

exports[`FormFieldTooltipFc should set the correct align property 1`] = `
<kol-tooltip-wc
  _align="left"
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip"
/>
`;

exports[`FormFieldTooltipFc should set the correct badgeText 1`] = `
<kol-tooltip-wc
  _badgetext="Badge Text"
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip"
/>
`;

exports[`FormFieldTooltipFc should set the correct class names 1`] = `
<kol-tooltip-wc
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip custom-class"
/>
`;

exports[`FormFieldTooltipFc should set the correct id and label 1`] = `
<kol-tooltip-wc
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip"
/>
`;

exports[`FormFieldTooltipFc should set the correct id when hideLabel is true 1`] = `
<kol-tooltip-wc
  _id="test-id-label"
  _label="Test Label"
  aria-hidden="true"
  class="kol-form-field__tooltip"
/>
`;
